# OpenDataDiiaWorker

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logs.txt  pyproject.toml
migratons/: env.py
migratons/versions/: 2d88774c2323_create_recors_table.py
oddw/: main.py  settings.py  utils.py
oddw/db/: models.py  session.py
oddw/services/: api.py  db.py
